@@ -1,3 +1,10 @@
+2004-09-29 Matthias Clasen <mclasen@redhat.com>
+
+	* bonobo/bonobo-ui-toolbar-control-item.c: Remove a 
+	broken and unneeded finalizer, avoid warnings when
+	toolbars are destroyed, and make control toolitems
+	non-homogeneous.
+
 2004-09-27 Matthias Clasen <mclasen@redhat.com>
 
 	* bonobo/bonobo-ui-perferences.c 
